main.jsp = main.html 동기화 작업 [윤승재]

--- a/syj/WebContent/main.html
+++ b/syj/WebContent/main.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="css/style.css">
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>메인페이지</title>
 </head>
 <body>
-
+	<div class="toptoptop">
+		<div class="topbar">
+			<form action="#" class="searchform order-lg-last">
+				<div class="form-group d-flex">
+					<input type="text" class="form-control pl-3" placeholder="Search">
+					<button type="submit" class="form-control search">
+						<span class="ion-ios-search"></span>
+					</button>
+				</div>
+			</form>
+		</div>
+	</div>
 </body>
 </html>
