--- a/syj/WebContent/main.html
+++ b/syj/WebContent/main.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/style.css">
 <meta charset="UTF-8">
-<title>메인페이지</title>
+<script src="https://kit.fontawesome.com/af09124883.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="css/style.css">
+<title>우리 동네 대나무 숲</title>
 </head>
 <body>
+	<header>
 	<div class="toptoptop">
-		<div class="topbar">
-			<form action="#" class="searchform order-lg-last">
-				<div class="form-group d-flex">
-					<input type="text" class="form-control pl-3" placeholder="Search">
-					<button type="submit" class="form-control search">
-						<span class="ion-ios-search"></span>
-					</button>
-				</div>
-			</form>
-		</div>
+			<div class="box">
+			  <div class="container-1">
+			      <span class="icon"><i class="fa fa-search"></i></span>
+			      <input type="search" id="search" placeholder="Search..." />
+			  </div>
+			</div>
 	</div>
+</header>
+<div class="sidebar">
+	<h1>
+		<div class="logo"><a href="#"><img src="#" alt="ourforest" title="OF"></a></div>
+	</h1>
+</div>
+<div>
+	<ul>
+		<li>
+			<a href="">
+				<i></i><span>로그인</span>
+			</a>
+		</li>
+		<li>
+			<a href="">
+				<i></i><span>회원가입</span>
+			</a>
+		</li>
+
+	</ul>
+
+</div>
 </body>
 </html>
