브런치 별도 운영 시작[윤승재]

--- a/syj/WebContent/main.html
+++ b/syj/WebContent/main.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<script src="https://kit.fontawesome.com/af09124883.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/af09124883.js" crossorigin="anonymous"> //fontawesome import 링크
+</script>
 <link rel="stylesheet" href="css/style.css">
 <title>우리 동네 대나무 숲</title>
 </head>
@@ -25,18 +26,39 @@
 <div>
 	<ul>
 		<li>
-			<a href="">
+			<a href="#">
 				<i></i><span>로그인</span>
 			</a>
 		</li>
 		<li>
-			<a href="">
+			<a href="#">
 				<i></i><span>회원가입</span>
 			</a>
 		</li>
+	</ul>
+	<ul>
+		<li><a href="#"><i class="fas fa-comments"></i><span>지역별 청원</span></a>
+			<ul>
+				<li><a href="#">서울시</a></li>
+				<li><a href="#">인천시</a></li>
+				<li><a href="#">대전시</a></li>
+				<li><a href="#">세종시</a></li>
+				<li><a href="#">경기도</a></li>
+				<li><a href="#">충청도</a></li>
+				<li><a href="#">강원도</a></li>
+				<li><a href="#">광주시</a></li>
+				<li><a href="#">부산시</a></li>
+				<li><a href="#">대구시</a></li>
+				<li><a href="#">울산시</a></li>
+				<li><a href="#">경상도</a></li>
+				<li><a href="#">전라도</a></li>
+			</ul>
+		</li>
+		<li><a href="#">답변된 청원</a></li>
+		<li><a href="#">우리동네 청원</a></li>
+		<li><a href="#">지금 청원하기</a></li>
 
 	</ul>
-
 </div>
 </body>
 </html>
