사이드바 수정 09/22 [윤승재]

--- a/syj/WebContent/main.html
+++ b/syj/WebContent/main.html
@@ -18,24 +18,28 @@
 			</div>
 	</div>
 </header>
-<div class="sidebar">
+<div class="sidebart">
 	<h1>
 		<div class="logo"><a href="#"><img src="#" alt="ourforest" title="OF"></a></div>
 	</h1>
-</div>
-<div>
 	<ul>
 		<li>
 			<a href="#">
-				<i></i><span>로그인</span>
+				<i class="fas fa-user"></i><span>로그인</span>
 			</a>
+			<ul>
+				<li></li>
+
+			</ul>
 		</li>
 		<li>
 			<a href="#">
-				<i></i><span>회원가입</span>
+				<i class="fas fa-sign-in-alt"></i><span>회원가입</span>
 			</a>
 		</li>
 	</ul>
+</div>
+<div class="sidebarf">
 	<ul>
 		<li><a href="#"><i class="fas fa-comments"></i><span>지역별 청원</span></a>
 			<ul>
@@ -54,11 +58,32 @@
 				<li><a href="#">전라도</a></li>
 			</ul>
 		</li>
-		<li><a href="#">답변된 청원</a></li>
-		<li><a href="#">우리동네 청원</a></li>
-		<li><a href="#">지금 청원하기</a></li>
-
+		<li><a href="#"><i class="fas fa-gavel"></i><span>답변된 청원</span></a>
+			<ul>
+				<li><a href="#">전체 보기</a></li>
+				<li><a href="#">우리 동네 보기</a></li>
+			</ul>
+		</li>
+		<li><a href="#"><i class="fas fa-paper-plane"></i><span>청원 하기</span></a>
+			<ul>
+				<li><a href="#">지금 청원하기</a></li>
+				<li><a href="#">내 청원보기</a></li>
+			</ul>
+		</li>
+		<li><a href="#"><i class="fas fa-tree"></i><span>대나무숲</span></a>
+			<ul>
+				<li><a href="#">사진 자료실</a></li>
+				<li><a href="#">동영상 자료실</a></li>
+				<li><a href="#">우리 동네 소식 보기</a></li>
+				<li><a href="#">다른 동네 소식 보기</a></li>
+			</ul>
+		</li>
 	</ul>
+</div>
+<div class="contents">
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
 </div>
 </body>
 </html>
