사이드바 html / css 초기셋팅 완료

--- a/syj/WebContent/main.html
+++ b/syj/WebContent/main.html
@@ -25,23 +25,52 @@
 	<ul>
 		<li>
 			<a href="#">
-				<i class="fas fa-user"></i><span>로그인</span>
+				<i class="fas fa-user"></i> <span>로그인</span>
 			</a>
-			<ul>
-				<li></li>
 
-			</ul>
 		</li>
 		<li>
 			<a href="#">
-				<i class="fas fa-sign-in-alt"></i><span>회원가입</span>
+				<i class="fas fa-sign-in-alt"></i> <span>회원가입</span>
 			</a>
 		</li>
 	</ul>
 </div>
 <div class="sidebarf">
+	<form action="" class="l_form">
+		<input type="text" value="아이디를 입력하세요.">
+		<input type="password" value="비밀번호를 입력하세요."><br>
+		<input type="submit" value="로그인">
+	</form>
+	<form action="" class="j_form">
+		아 이 디 : <input class="j_textbox" type="text" value="사용할 아이디를 입력하세요."><br>
+		비밀번호: <input class="j_textbox" type="password" value="비밀번호를 입력하세요."><br>
+		재 확 인 : <input class="j_textbox" type="password" value="비밀번호를 입력하세요."><br>
+		성별 : <input type="radio" name="gender">남자<input type="radio" name="gender">여자<br>
+		생년월일 :<input class="j_textbox" type="date" style="width:173px;"><br>
+		지역 선택 :
+		<select class="" name="">
+			<option value="seoul">서울시</option>
+			<option value="incheon">인천시</option>
+			<option value="daejeon">대전시</option>
+			<option value="sejong">세종시</option>
+			<option value="gyeonggi">경기도</option>
+			<option value="chungcheong">충청도</option>
+			<option value="gangwon">강원도</option>
+			<option value="gwangju">광주시</option>
+			<option value="busna">부산시</option>
+			<option value="daegu">대구시</option>
+			<option value="ulsan">울산시</option>
+			<option value="gyeongsang">경상도</option>
+			<option value="jeolla">전라도</option>
+		</select>
+		<input type="submit" name="" value="약관을 동의하며 회원가입" style="width:100%;">
+	</form>
+		<div class="j_menual">
+		<a href="#">회원가입약관</a> / <a href="#">개인정보 취급 방침</a>
+		</div>
 	<ul>
-		<li><a href="#"><i class="fas fa-comments"></i><span>지역별 청원</span></a>
+		<li><a href="#"><i class="fas fa-comments"></i> <span>지역별 청원</span></a>
 			<ul>
 				<li><a href="#">서울시</a></li>
 				<li><a href="#">인천시</a></li>
@@ -58,19 +87,19 @@
 				<li><a href="#">전라도</a></li>
 			</ul>
 		</li>
-		<li><a href="#"><i class="fas fa-gavel"></i><span>답변된 청원</span></a>
+		<li><a href="#"><i class="fas fa-gavel"></i> <span>답변된 청원</span></a>
 			<ul>
 				<li><a href="#">전체 보기</a></li>
 				<li><a href="#">우리 동네 보기</a></li>
 			</ul>
 		</li>
-		<li><a href="#"><i class="fas fa-paper-plane"></i><span>청원 하기</span></a>
+		<li><a href="#"><i class="fas fa-paper-plane"></i> <span>청원 하기</span></a>
 			<ul>
 				<li><a href="#">지금 청원하기</a></li>
 				<li><a href="#">내 청원보기</a></li>
 			</ul>
 		</li>
-		<li><a href="#"><i class="fas fa-tree"></i><span>대나무숲</span></a>
+		<li><a href="#"><i class="fas fa-tree"></i> <span>대나무숲</span></a>
 			<ul>
 				<li><a href="#">사진 자료실</a></li>
 				<li><a href="#">동영상 자료실</a></li>
