--- a/syj/WebContent/main.html
+++ b/syj/WebContent/main.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <script src="https://kit.fontawesome.com/af09124883.js" crossorigin="anonymous"> //fontawesome import 링크
 </script>
+<script type="text/javascript" src="js/script.js">
+</script>
 <link rel="stylesheet" href="css/style.css">
 <title>우리 동네 대나무 숲</title>
 </head>
@@ -24,13 +26,13 @@
 	</h1>
 	<ul>
 		<li>
-			<a href="#">
+			<a href="#" class="login_button">
 				<i class="fas fa-user"></i> <span>로그인</span>
 			</a>
 
 		</li>
 		<li>
-			<a href="#">
+			<a href="#" class="join_button">
 				<i class="fas fa-sign-in-alt"></i> <span>회원가입</span>
 			</a>
 		</li>
@@ -38,19 +40,35 @@
 </div>
 <div class="sidebarf">
 	<form action="" class="l_form">
-		<input type="text" value="아이디를 입력하세요.">
-		<input type="password" value="비밀번호를 입력하세요."><br>
-		<input type="submit" value="로그인">
+	<div class="cl_lj_div">
+		<label for="id_l_textbox">아이디를 입력하세요.</label>
+		<input id="id_l_textbox" class="l_textbox" type="text">
+	</div>
+	<div class="cl_lj_div">
+		<label for="id_j_textbox">비밀번호를 입력하세요.</label>
+		<input class="l_textbox" type="password" id="id_j_textbox"><br>
+	</div>
+		<input type="submit" value="로그인" class="l_button">
 	</form>
 	<form action="" class="j_form">
-		아 이 디 : <input class="j_textbox" type="text" value="사용할 아이디를 입력하세요."><br>
-		비밀번호: <input class="j_textbox" type="password" value="비밀번호를 입력하세요."><br>
-		재 확 인 : <input class="j_textbox" type="password" value="비밀번호를 입력하세요."><br>
-		성별 : <input type="radio" name="gender">남자<input type="radio" name="gender">여자<br>
-		생년월일 :<input class="j_textbox" type="date" style="width:173px;"><br>
+		<div class="cl_j_div">
+			<label for="id_user_textbox">사용할 아이디를 입력하세요.</label>
+			<input id="id_user_textbox" class="j_textbox" type="text"><br>
+		</div>
+		<div class="cl_j_div">
+			<label for="id_j_pass1">사용할 비밀번호를 입력하세요.</label>
+			<input id="id_j_pass1"class="j_textbox" type="password">
+		</div>
+		<div class="cl_j_div">
+			<label for="id_j_pass2">비밀번호를 한번 더 입력하세요.</label>
+			<input id="id_j_pass2"class="j_textbox" type="password">
+		</div>
+		성별 : <input type="radio" name="gender">남자 <input type="radio" name="gender">여자<br><br>
+		생년월일 :<input class="j_both" type="date" style="width:173px;"><br><br>
 		지역 선택 :
-		<select class="" name="">
-			<option value="seoul">서울시</option>
+		<div class="selectbox">
+		<select id="select">
+			<option value="seoul" selected>서울시</option>
 			<option value="incheon">인천시</option>
 			<option value="daejeon">대전시</option>
 			<option value="sejong">세종시</option>
@@ -64,7 +82,8 @@
 			<option value="gyeongsang">경상도</option>
 			<option value="jeolla">전라도</option>
 		</select>
-		<input type="submit" name="" value="약관을 동의하며 회원가입" style="width:100%;">
+	</div>
+		<input type="submit" class="j_button" value="약관을 동의하며 회원가입" style="font-size:15px;text-align:left;padding-left:17px;">
 	</form>
 		<div class="j_menual">
 		<a href="#">회원가입약관</a> / <a href="#">개인정보 취급 방침</a>
