메뉴 구성 수정

--- a/syj/WebContent/main.html
+++ b/syj/WebContent/main.html
@@ -4,12 +4,11 @@
 <meta charset="UTF-8">
 <!-- HTTPS required. HTTP will give a 403 forbidden response -->
 <script src="https://sdk.accountkit.com/en_US/sdk.js"></script>
-<script src="https://kit.fontawesome.com/af09124883.js" crossorigin="anonymous"> //fontawesome import 링크
-</script>
+<script src="https://kit.fontawesome.com/af09124883.js" crossorigin="anonymous"> </script>
 <script type="text/javascript" src="js/script.js">
 </script>
 <link rel="stylesheet" href="css/style.css">
-<title>우리 동네 대나무 숲</title>
+<title>우리 동네 대나무 숲 프로젝트</title>
 </head>
 <body>
 	<header>
@@ -98,47 +97,44 @@
 		</div>
 <div class="sidebar_cate">
 	<ul>
-		<li><a href="#" class="loc_p_li"><i class="fas fa-comments"></i> <span>지역별 청원</span></a>
-			<ul class="loc_s_li">
-				<li><a href="#">서울시</a></li>
-				<li><a href="#">인천시</a></li>
-				<li><a href="#">대전시</a></li>
-				<li><a href="#">세종시</a></li>
-				<li><a href="#">경기도</a></li>
-				<li><a href="#">충청도</a></li>
-				<li><a href="#">강원도</a></li>
-				<li><a href="#">광주시</a></li>
-				<li><a href="#">부산시</a></li>
-				<li><a href="#">대구시</a></li>
-				<li><a href="#">울산시</a></li>
-				<li><a href="#">경상도</a></li>
-				<li><a href="#">전라도</a></li>
-			</ul>
-		</li>
-		<li><a href="#"><i class="fas fa-gavel"></i> <span>답변된 청원</span></a>
-			<ul>
-				<li><a href="#">전체 보기</a></li>
-				<li><a href="#">우리 동네 보기</a></li>
-			</ul>
-		</li>
-		<li><a href="#"><i class="fas fa-paper-plane"></i> <span>청원 하기</span></a>
-			<ul>
-				<li><a href="#">지금 청원하기</a></li>
-				<li><a href="#">내 청원보기</a></li>
-			</ul>
-		</li>
-		<li><a href="#"><i class="fas fa-tree"></i> <span>대나무숲</span></a>
-			<ul>
-				<li><a href="#">사진 자료실</a></li>
-				<li><a href="#">동영상 자료실</a></li>
-				<li><a href="#">우리 동네 소식 보기</a></li>
-				<li><a href="#">다른 동네 소식 보기</a></li>
-			</ul>
-		</li>
+		<li><a href="#" class="loc_p_li"><span class="i_1 i_11"><i class="fas fa-comments"></i></span> <span class="i_2 i_111">지역별 청원</span></a></li>
+		<li><a href="#"><span class="i_1 i_22"><i class="fas fa-gavel"></i></span> <span class="i_2 i_222">답변된 청원</span></a></li>
+		<li><a href="#"><span class="i_1 i_33"><i class="fas fa-paper-plane"></i></span> <span class="i_2 i_333">청원 하기</span></a></li>
+		<li><a href="#"><span class="i_1 i_44"><i class="fas fa-tree"></i></span> <span class="i_2 i_444">대나무숲</span></a></li>
 	</ul>
+	<div class="sidebar_sub">
+		<ul class="ul_1">
+			<li><a href="#">서울시</a></li>
+			<li><a href="#">인천시</a></li>
+			<li><a href="#">대전시</a></li>
+			<li><a href="#">세종시</a></li>
+			<li><a href="#">경기도</a></li>
+			<li><a href="#">충청도</a></li>
+			<li><a href="#">강원도</a></li>
+			<li><a href="#">광주시</a></li>
+			<li><a href="#">부산시</a></li>
+			<li><a href="#">대구시</a></li>
+			<li><a href="#">울산시</a></li>
+			<li><a href="#">경상도</a></li>
+			<li><a href="#">전라도</a></li>
+		</ul>
+		<ul class="ul_2">
+			<li><a href="#">전체 보기</a></li>
+			<li><a href="#">우리 동네 보기</a></li>
+		</ul>
+		<ul class="ul_3">
+			<li><a href="#">지금 청원하기</a></li>
+			<li><a href="#">내 청원보기</a></li>
+		</ul>
+		<ul class="ul_4">
+			<li><a href="#">사진 자료실</a></li>
+			<li><a href="#">동영상 자료실</a></li>
+			<li><a href="#">우리 동네 소식 보기</a></li>
+			<li><a href="#">다른 동네 소식 보기</a></li>
+		</ul>
+	</div>
 </div>
 
-<div class="contents">
-</div>
+
 </body>
 </html>
