--- a/syj/WebContent/answer_board.html
+++ b/syj/WebContent/answer_board.html
@@ -150,24 +150,22 @@
 
                     <div id="comments" class="column large-12">
 
-                        <h3 class="h2">청원 전체 목록 [최신순]</h3>
-                        <div style="float:right;">
-                          <button style="height:40px;line-height:40px;" onclick="location.href='write.html'">지금 청원하기</button>
-                        </div>
+                        <h3 class="h2">답변된 청원</h3>
+
                         <!-- START commentlist -->
                         <ol class="commentlist">
 
                             <li class="depth-1 comment">
 
                                 <div class="comment__avatar">
-                                    <img class="avatar" src="images/avatars/user-01.jpg" alt="" width="50" height="50">
+                                <button class="answer_button">답변 5호</button>
                                 </div>
 
                                 <div class="comment__content">
 
                                     <div class="comment__info">
-                                        <div class="post_no">게시글 번호 5</div>
-                                        <div class="comment__author">작성자 이름 예시</div>
+                                        <div class="post_no">원래의 게시글 번호 5</div>
+                                        <div class="comment__author">청원 게시글 제목</div>
                                         <div class="comment__meta">
                                             <div class="comment__time">April 30, 2019</div>
                                             <div class="comment__reply">
@@ -188,14 +186,14 @@
                             <li class="thread-alt depth-1 comment">
 
                                 <div class="comment__avatar">
-                                    <img class="avatar" src="images/avatars/user-04.jpg" alt="" width="50" height="50">
+                                  <button class="answer_button">답변 4호</button>
                                 </div>
 
                                 <div class="comment__content">
 
                                     <div class="comment__info">
-                                        <div class="post_no">게시글 번호 4</div>
-                                        <div class="comment__author">작성자 이름 예시</div>
+                                        <div class="post_no">원래의 게시글 번호 4</div>
+                                        <div class="comment__author">청원 게시글 제목</div>
 
                                         <div class="comment__meta">
                                             <div class="comment__time">April 30, 2019</div>
@@ -213,19 +211,16 @@
 
                                 </div>
 
-                                <ul class="children">
 
-                                    <li class="depth-2 comment">
-
-                                        <div class="comment__avatar">
-                                            <img class="avatar" src="images/avatars/user-03.jpg" alt="" width="50" height="50">
-                                        </div>
+                                      <div class="comment__avatar">
+                                        <button class="answer_button">답변 3호</button>
+                                      </div>
 
                                         <div class="comment__content">
 
                                             <div class="comment__info">
-                                                <div class="post_no">게시글 번호 3</div>
-                                                <div class="comment__author">작성자 이름 예시</div>
+                                                <div class="post_no">원래의 게시글 번호 3</div>
+                                                <div class="comment__author">청원 게시글 제목</div>
 
                                                 <div class="comment__meta">
                                                     <div class="comment__time">April 29, 2019</div>
@@ -243,19 +238,16 @@
 
                                         </div>
 
-                                        <ul class="children">
 
-                                            <li class="depth-3 comment">
-
-                                                <div class="comment__avatar">
-                                                    <img class="avatar" src="images/avatars/user-04.jpg" alt="" width="50" height="50">
-                                                </div>
+                                              <div class="comment__avatar">
+                                                <button class="answer_button">답변 2호</button>
+                                              </div>
 
                                                 <div class="comment__content">
 
                                                     <div class="comment__info">
-                                                        <div class="post_no">게시글 번호 2</div>
-                                                        <div class="comment__author">작성자 이름 예시</div>
+                                                        <div class="post_no">원래의 게시글 번호 2</div>
+                                                        <div class="comment__author">청원 게시글 제목</div>
 
                                                         <div class="comment__meta">
                                                             <div class="comment__time">April 29, 2019</div>
@@ -272,27 +264,19 @@
 
                                                 </div>
 
-                                            </li>
-
-                                        </ul>
-
-                                    </li>
-
-                                </ul>
-
                             </li> <!-- end comment level 1 -->
 
                             <li class="depth-1 comment">
 
-                                <div class="comment__avatar">
-                                    <img class="avatar" src="images/avatars/user-02.jpg" alt="" width="50" height="50">
-                                </div>
+                              <div class="comment__avatar">
+                                <button class="answer_button">답변 1호</button>
+                              </div>
 
                                 <div class="comment__content">
 
                                     <div class="comment__info">
-                                        <div class="post_no">게시글 번호 1</div>
-                                        <div class="comment__author">작성자 이름 예시</div>
+                                        <div class="post_no">원래의 게시글 번호 1</div>
+                                        <div class="comment__author">청원 게시글 제목</div>
 
                                         <div class="comment__meta">
                                             <div class="comment__time">April 26, 2019</div>
