--- a/syj/WebContent/loc_board.html
+++ b/syj/WebContent/loc_board.html
@@ -146,14 +146,41 @@
         <div class="s-content content">
             <main class="row content__page">
 
+           <!-- end entry__header -->
+
+                    <div class="entry__content">
+                        <p class="entry__tags">
+                            <span>지역 모아 보기</span>
+
+                            <span class="entry__tag-list">
+                                <a href="#0">전체 보기</a>
+                                <a href="#0">서울시</a>
+                                <a href="#0">인천시</a>
+                                <a href="#0">대전시</a>
+                                <a href="#0">세종시</a>
+                                <a href="#0">경기도</a>
+                                <a href="#0">충청도</a>
+                                <a href="#0">강원도</a>
+                                <a href="#0">광주시</a>
+                                <a href="#0">부산시</a>
+                                <a href="#0">대구시</a>
+                                <a href="#0">울산시</a>
+                                <a href="#0">경상도</a>
+                                <a href="#0">전라도</a>
+                            </span>
+                        </p>
+                    </div> <!-- end entry content -->
+
+
+
+                </article> <!-- end column large-full entry-->
+
                 <div class="comments-wrap">
 
                     <div id="comments" class="column large-12">
 
-                        <h3 class="h2">청원 전체 목록 [최신순]</h3>
-                        <div style="float:right;">
-                          <button style="height:40px;line-height:40px;" onclick="location.href='write.html'">지금 청원하기</button>
-                        </div>
+                        <h3 class="h2">XX 지역 청원</h3>
+
                         <!-- START commentlist -->
                         <ol class="commentlist">
 
@@ -179,7 +206,7 @@
                                     <div class="comment__text">
                                     <p>Adhuc quaerendum est ne, vis ut harum tantas noluisse, id suas iisque mei. Nec te inani ponderum vulputate,
                                     facilisi expetenda has et. Iudico dictas scriptorem an vim, ei alia mentitum est, ne has voluptua praesent.</p>
-                                    </div>
+                                    </div><hr>
 
                                 </div>
 
@@ -209,13 +236,10 @@
                                     <p>Sumo euismod dissentiunt ne sit, ad eos iudico qualisque adversarium, tota falli et mei. Esse euismod
                                     urbanitas ut sed, et duo scaevola pericula splendide. Primis veritus contentiones nec ad, nec et
                                     tantas semper delicatissimi.</p>
-                                    </div>
+                                    </div><hr>
 
                                 </div>
 
-                                <ul class="children">
-
-                                    <li class="depth-2 comment">
 
                                         <div class="comment__avatar">
                                             <img class="avatar" src="images/avatars/user-03.jpg" alt="" width="50" height="50">
@@ -239,13 +263,9 @@
                                                 <p>Duis sed odio sit amet nibh vulputate
                                                 cursus a sit amet mauris. Morbi accumsan ipsum velit. Duis sed odio sit amet nibh vulputate
                                                 cursus a sit amet mauris</p>
-                                            </div>
+                                            </div><hr>
 
                                         </div>
-
-                                        <ul class="children">
-
-                                            <li class="depth-3 comment">
 
                                                 <div class="comment__avatar">
                                                     <img class="avatar" src="images/avatars/user-04.jpg" alt="" width="50" height="50">
@@ -268,17 +288,10 @@
                                                     <div class="comment__text">
                                                     <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est
                                                     etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.</p>
-                                                    </div>
+                                                    </div><hr>
 
                                                 </div>
 
-                                            </li>
-
-                                        </ul>
-
-                                    </li>
-
-                                </ul>
 
                             </li> <!-- end comment level 1 -->
 
@@ -304,7 +317,7 @@
 
                                     <div class="comment__text">
                                     <p>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.</p>
-                                    </div>
+                                    </div><hr>
 
                                 </div>
 
