--- a/syj/WebContent/exp_board.html
+++ b/syj/WebContent/exp_board.html
@@ -146,14 +146,14 @@
         <div class="s-content content">
             <main class="row content__page">
 
+           <!-- end entry__header -->
+
                 <div class="comments-wrap">
 
                     <div id="comments" class="column large-12">
 
-                        <h3 class="h2">청원 전체 목록 [최신순]</h3>
-                        <div style="float:right;">
-                          <button style="height:40px;line-height:40px;" onclick="location.href='write.html'">지금 청원하기</button>
-                        </div>
+                        <h3 class="h2">만료된 청원</h3>
+
                         <!-- START commentlist -->
                         <ol class="commentlist">
 
@@ -179,7 +179,7 @@
                                     <div class="comment__text">
                                     <p>Adhuc quaerendum est ne, vis ut harum tantas noluisse, id suas iisque mei. Nec te inani ponderum vulputate,
                                     facilisi expetenda has et. Iudico dictas scriptorem an vim, ei alia mentitum est, ne has voluptua praesent.</p>
-                                    </div>
+                                    </div><hr>
 
                                 </div>
 
@@ -209,13 +209,10 @@
                                     <p>Sumo euismod dissentiunt ne sit, ad eos iudico qualisque adversarium, tota falli et mei. Esse euismod
                                     urbanitas ut sed, et duo scaevola pericula splendide. Primis veritus contentiones nec ad, nec et
                                     tantas semper delicatissimi.</p>
-                                    </div>
+                                    </div><hr>
 
                                 </div>
 
-                                <ul class="children">
-
-                                    <li class="depth-2 comment">
 
                                         <div class="comment__avatar">
                                             <img class="avatar" src="images/avatars/user-03.jpg" alt="" width="50" height="50">
@@ -239,13 +236,9 @@
                                                 <p>Duis sed odio sit amet nibh vulputate
                                                 cursus a sit amet mauris. Morbi accumsan ipsum velit. Duis sed odio sit amet nibh vulputate
                                                 cursus a sit amet mauris</p>
-                                            </div>
+                                            </div><hr>
 
                                         </div>
-
-                                        <ul class="children">
-
-                                            <li class="depth-3 comment">
 
                                                 <div class="comment__avatar">
                                                     <img class="avatar" src="images/avatars/user-04.jpg" alt="" width="50" height="50">
@@ -268,17 +261,10 @@
                                                     <div class="comment__text">
                                                     <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est
                                                     etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.</p>
-                                                    </div>
+                                                    </div><hr>
 
                                                 </div>
 
-                                            </li>
-
-                                        </ul>
-
-                                    </li>
-
-                                </ul>
 
                             </li> <!-- end comment level 1 -->
 
@@ -304,7 +290,7 @@
 
                                     <div class="comment__text">
                                     <p>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.</p>
-                                    </div>
+                                    </div><hr>
 
                                 </div>
 
