수정완료 초기화

--- a/syj/WebContent/board.html
+++ b/syj/WebContent/board.html
@@ -146,64 +146,14 @@
         <div class="s-content content">
             <main class="row content__page">
 
-           <!-- end entry__header -->
-
-                    <div class="entry__content">
-                        <p class="entry__tags">
-                            <span>지역 모아 보기</span>
-
-                            <span class="entry__tag-list">
-                                <a href="#0">전체 보기</a>
-                                <a href="#0">서울시</a>
-                                <a href="#0">인천시</a>
-                                <a href="#0">대전시</a>
-                                <a href="#0">세종시</a>
-                                <a href="#0">경기도</a>
-                                <a href="#0">충청도</a>
-                                <a href="#0">강원도</a>
-                                <a href="#0">광주시</a>
-                                <a href="#0">부산시</a>
-                                <a href="#0">대구시</a>
-                                <a href="#0">울산시</a>
-                                <a href="#0">경상도</a>
-                                <a href="#0">전라도</a>
-                            </span>
-                        </p>
-                    </div> <!-- end entry content -->
-
-                    <div class="entry__related">
-                        <h3 class="h2">오늘의 청원</h3>
-
-                        <ul class="related">
-                            <li class="related__item">
-                                <a href="single-standard.html" class="related__link">
-                                    <img src="images/thumbs/masonry/walk-600.jpg" alt="">
-                                </a>
-                                <h5 class="related__post-title">예시 영역 1</h5>
-                            </li>
-                            <li class="related__item">
-                                <a href="single-standard.html" class="related__link">
-                                    <img src="images/thumbs/masonry/dew-600.jpg" alt="">
-                                </a>
-                                <h5 class="related__post-title">예시 영역 2</h5>
-                            </li>
-                            <li class="related__item">
-                                <a href="single-standard.html" class="related__link">
-                                    <img src="images/thumbs/masonry/rucksack-600.jpg" alt="">
-                                </a>
-                                <h5 class="related__post-title">예시 영역 3</h5>
-                            </li>
-                        </ul>
-                    </div> <!-- end entry related -->
-
-                </article> <!-- end column large-full entry-->
-
                 <div class="comments-wrap">
 
                     <div id="comments" class="column large-12">
 
-                        <h3 class="h2">청원 목록</h3>
-
+                        <h3 class="h2">청원 전체 목록 [최신순]</h3>
+                        <div style="float:right;">
+                          <button style="height:40px;line-height:40px;" onclick="location.href='write.html'">지금 청원하기</button>
+                        </div>
                         <!-- START commentlist -->
                         <ol class="commentlist">
 
