--- a/syj/WebContent/write.html
+++ b/syj/WebContent/write.html
@@ -81,37 +81,35 @@
 
               <ul class="header__nav">
                   <li class="current has-children">
-                      <a href="index.html" title="">우리 동네 대나무숲</a>
+                      <a href="index.html" title="">대나무숲 입장 하기</a>
                       <ul class="sub-menu">
-                      <li><a href="single-video.html">로그인</a></li>
-                      <li><a href="single-audio.html">회원 가입</a></li>
-                      </ul>
-                  </li>
-                  <li>
-                      <a href="board.html" title="">지역별 청원</a>
-                  </li>
-                  <li class="has-children">
-                      <a href="#0" title="">답변된 청원</a>
-                      <ul class="sub-menu">
-                      <li><a href="board.html">전체 보기</a></li>
-                      <li><a href="single-audio.html">우리 동네 보기</a></li>
+                      <li><a href="login.html">로그인</a></li>
+                      <li><a href="join.html">회원 가입</a></li>
                       </ul>
                   </li>
                   <li class="has-children">
-                      <a href="styles.html" title="">청원 하기</a>
+                      <a href="#0" title="">대나무숲 청원</a>
+                      <ul class="sub-menu">
+                      <li><a href="board.html">실시간 청원</a></li>
+                      <li><a href="loc_board.html">지역별 청원</a></li>
+                      <li><a href="exp_board.html">만료된 청원</a></li>
+                      <li><a href="answer_board.html">답변된 청원</a></li>
+                      <li><a href="faq.html">대나무숲 청원 FAQ</a></li>
+                      </ul>
+                  </li>
+                  <li class="has-children">
+                      <a href="#0" title="">청원 하기</a>
                       <ul class="sub-menu">
                       <li><a href="write.html">지금 청원 하기</a></li>
-                      <li><a href="single-audio.html">청원 하는 방법</a></li>
-                      <li><a href="single-audio.html">청원 과정</a></li>
                       </ul>
                   </li>
                   <li class="has-children">
                       <a href="page-about.html" title="">대나무 숲</a>
                       <ul class="sub-menu">
-                      <li><a href="single-video.html">사진 자료실</a></li>
-                      <li><a href="single-audio.html">동영상 자료실</a></li>
-                      <li><a href="single-audio.html">우리 동네 소식 보기</a></li>
-                      <li><a href="single-audio.html">지역별 소식 보기</a></li>
+                      <li><a href="img_storage.html">사진 자료실</a></li>
+                      <li><a href="video_storage.html">동영상 자료실</a></li>
+                      <li><a href="Advertising.html">지역별 소식 보기</a></li>
+                      <li><a href="status.html">청원 진행 과정</a></li>
                       </ul>
                   </li>
               </ul> <!-- end header__nav -->
